# Clasificacion_Avisos

./: .gitignore  README.md  RESUMEN_PROYECTO.md  ejemplo_uso.py  pyproject.toml
docs/business_understanding/: project_charter.md
docs/data/: data_definition.md  data_dictionary.md  data_summary.md
docs/infraestructure/: infraestructure_docs.md
packagename/classify/: classify.py
packagename/database/: BoW clasificación de avisos.xlsx  Diccionario DA.xlsx  Diccionario TE.xlsx  database.py
packagename/database/.ipynb_checkpoints/: database-checkpoint.ipynb
packagename/preprocessing/: .gitignore  preprocess.py  preprocessing.ipynb  preprocessing.py
