[tool.poetry]
name = "clasificacion-avisos"
version = "0.1.0"
description = ""
authors = ["edwingonzalezg <ingeniero.ed@gmail.com>"]
readme = "README.md"
packages = [{include = "clasificacion_avisos"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
