[tool.poetry]
name = "clasificacion-avisos"
version = "0.1.0"
description = ""
authors = ["edwingonzalezg <ingeniero.ed@gmail.com>"]
readme = "README.md"
packages = [{include = "clasificacion_avisos"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.2"
numpy = "^1.23.5"
seaborn = "^0.12.1"
matplotlib = "^3.6.2"
nltk = "^3.7"
regex = "^2022.10.31"
scikit-learn = "^1.2.0"
openpyxl = "^3.0.10"
jupytext = "^1.14.2"


[tool.poetry.group.dev.dependencies]
ipython = "^8.7.0"
jupytext = "^1.14.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
